--- a/VerifyingSSI.tex
+++ b/VerifyingSSI.tex
@@ -1,1 +1,1 @@
-\chapter{The Application and Comparison of X-SAT on Benchmark Problems}
+\chapter{The Application and Comparison of X-SAT on Benchmark Problems}{The Application and Comparison of X-SAT on Benchmark Problems} \label{chapter:dpllapp}
